[tool.poetry]
name = "airhockey_backend"
version = "0.0.1"
description = "Aiohttp application for airhockey game interface"
authors = ["Yegor Shevchenko <egorhs19@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = {extras = ["speedups"], version = "^3.8.3"}
SQLAlchemy = {extras = ["asincio"], version = "^1.4.41"}

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
requests = "^2.28.1"
flake8 = "^5.0.4"
httpie = "^3.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
